[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/AnonFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/arena.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Anonymous.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/01_GameControl.gd" type="Script" id=4]
[ext_resource path="res://Resources/cranePawn.png" type="Texture" id=5]
[ext_resource path="res://Resources/peacockPawn.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/Anonymous.ttf"

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.629959
margin_right = -0.629944
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 10.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 1 )
text = "Crane And Peacock"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 20.0
margin_right = -20.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArenaRect" type="TextureRect" parent="."]
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 1.0
margin_left = 17.881
margin_top = 22.1189
margin_right = -22.119
margin_bottom = -17.8811
grow_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CranePawn" type="Sprite" parent="."]
position = Vector2( 10, 10 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
centered = false

[node name="PeacockPawn" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( 100, 100 )

[node name="StatusLabel" type="Label" parent="."]
anchor_left = 0.7
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 5.20001
margin_top = 30.0
margin_right = -5.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 3 )
text = "READY"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButton" type="Button" parent="."]
anchor_left = 0.7
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 4 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ActionButton" to="." method="_on_ActionButton_pressed"]
